[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/Arrow.png" type="Texture" id=1]
[ext_resource path="res://Scripts/pause.gd" type="Script" id=2]
[ext_resource path="res://Fonts/fibberish.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Sprites/Buttons/hover.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Buttons/pressed.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Buttons/normal.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
extra_spacing_space = -4
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 3 )

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bg" type="ColorRect" parent="."]
margin_right = 320.0
margin_bottom = 180.0
color = Color( 0, 0, 0, 0.501961 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 46.0
margin_bottom = -118.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Title"]
margin_left = 142.0
margin_top = 1.0
margin_right = 178.0
margin_bottom = 15.0
size_flags_horizontal = 4
custom_colors/font_color = Color( 0.909804, 0.909804, 0.909804, 1 )
custom_fonts/font = SubResource( 1 )
text = "PAUSE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 77.0
margin_bottom = -50.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Menu"]
margin_left = 123.0
margin_right = 197.0
margin_bottom = 53.0
size_flags_horizontal = 4
custom_constants/separation = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="TextureButton" parent="Menu/VBoxContainer"]
margin_right = 74.0
margin_bottom = 17.0
focus_neighbour_top = NodePath("../Exit")
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Menu/VBoxContainer/Play"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 3.0
margin_bottom = 1.0
size_flags_horizontal = 4
custom_colors/font_color = Color( 0.886275, 0.886275, 0.886275, 1 )
custom_fonts/font = SubResource( 4 )
text = "Reprendre"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="TextureButton" parent="Menu/VBoxContainer"]
margin_top = 18.0
margin_right = 74.0
margin_bottom = 35.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Menu/VBoxContainer/Options"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 3.0
size_flags_horizontal = 4
custom_colors/font_color = Color( 0.886275, 0.886275, 0.886275, 1 )
custom_fonts/font = SubResource( 4 )
text = "Options"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="TextureButton" parent="Menu/VBoxContainer"]
margin_top = 36.0
margin_right = 74.0
margin_bottom = 53.0
focus_neighbour_bottom = NodePath("../Play")
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Menu/VBoxContainer/Exit"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 3.0
margin_bottom = 1.0
size_flags_horizontal = 4
custom_colors/font_color = Color( 0.886275, 0.886275, 0.886275, 1 )
custom_fonts/font = SubResource( 4 )
text = "Quitter"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arrow" type="TextureRect" parent="."]
margin_left = 109.0
margin_top = 78.0
margin_right = 125.0
margin_bottom = 94.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Menu/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Menu/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
